Search for fields in existing cases even when status changed (#562)