@@ -4,7 +4,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.when;
-import static uk.co.nstauthority.fieldconsents.assets.fields.FieldService.fieldStatusesAllowed;
+import static uk.co.nstauthority.fieldconsents.assets.fields.FieldService.ALL_FIELD_STATUSES;
 import static uk.co.nstauthority.fieldconsents.assets.fields.FieldTestUtil.field1;
 import static uk.co.nstauthority.fieldconsents.assets.fields.FieldTestUtil.field1Json;
 import static uk.co.nstauthority.fieldconsents.assets.fields.FieldTestUtil.field1JsonWithOperator;
@@ -33,6 +33,12 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import uk.co.fivium.energyportalapi.client.RequestPurpose;
 import uk.co.fivium.energyportalapi.client.field.FieldApi;
 import uk.co.fivium.energyportalapi.generated.client.FieldsProjectionRoot;
+import uk.co.fivium.energyportalapi.generated.types.Field;
+import uk.co.fivium.energyportalapi.generated.types.FieldGeographicArea;
+import uk.co.fivium.energyportalapi.generated.types.FieldShore;
+import uk.co.fivium.energyportalapi.generated.types.FieldStatus;
+import uk.co.nstauthority.fieldconsents.application.assets.ApplicationAssetService;
+import uk.co.nstauthority.fieldconsents.assets.AssetType;
 import uk.co.nstauthority.fieldconsents.authentication.ServiceUserDetail;
 import uk.co.nstauthority.fieldconsents.authentication.ServiceUserDetailTestUtil;
 import uk.co.nstauthority.fieldconsents.authorisation.FieldEquityPartnerPermissionService;
@@ -62,6 +68,9 @@ class FieldSearchServiceTest {
   @Mock
   private FieldEquityPartnerPermissionService fieldEquityPartnerPermissionService;
 
+  @Mock
+  private ApplicationAssetService applicationAssetService;
+
   @InjectMocks
   private FieldSearchService fieldSearchService;
 
@@ -73,36 +82,46 @@ class FieldSearchServiceTest {
 
   @Test
   void searchFields_allTestFields() {
-    when(fieldApi.searchFields(eq("F"), eq(fieldStatusesAllowed),
-        any(FieldsProjectionRoot.class), eq(requestPurpose)))
+    when(fieldApi.searchFields(eq("F"), eq(ALL_FIELD_STATUSES), any(FieldsProjectionRoot.class), eq(requestPurpose)))
         .thenReturn(fieldList);
 
-    List<FieldJson> allTestFields = fieldSearchService.searchFields("F", REQUEST_PURPOSE);
-    assertThat(allTestFields).hasSize(3);
-    assertThat(allTestFields.get(0)).usingRecursiveComparison()
-        .isEqualTo(field1Json);
-    assertThat(allTestFields.get(1)).usingRecursiveComparison()
-        .isEqualTo(field2Json);
-    assertThat(allTestFields.get(2)).usingRecursiveComparison()
-        .isEqualTo(field3Json);
+    assertThat(fieldSearchService.searchFields("F", REQUEST_PURPOSE))
+        .usingRecursiveComparison()
+        .isEqualTo(List.of(field1Json, field2Json, field3Json));
+  }
+
+  @Test
+  void searchFields_includeInUseFieldIds() {
+    var defaultFieldBuilder = Field.newBuilder().geographicArea(FieldGeographicArea.CNS).shore(FieldShore.OFFSHORE);
+    var completeFieldList = List.of(
+        defaultFieldBuilder.fieldId(1).status(FieldStatus.STATUS500).build(),
+        defaultFieldBuilder.fieldId(2).status(FieldStatus.STATUS600).build(),
+        defaultFieldBuilder.fieldId(3).status(FieldStatus.UNKNOWN).build()
+    );
+    var completeFieldJsonList = completeFieldList.stream().map(FieldWithOperatorJson::from).toList();
+
+    // field 3 doesn't have an ALLOWED_FIELD_STATUSES status, but should still be included because it's used by the service
+    when(applicationAssetService.getAllUniqueAssetIdsForAssetType(AssetType.FIELD)).thenReturn(Set.of(3));
+    when(fieldApi.searchFields(eq("F"), eq(ALL_FIELD_STATUSES), any(FieldsProjectionRoot.class), eq(requestPurpose))).thenReturn(completeFieldList);
+
+    assertThat(fieldSearchService.searchFields("F", REQUEST_PURPOSE))
+        .usingRecursiveComparison()
+        .isEqualTo(completeFieldJsonList);
   }
 
   @Test
   void searchFields_singleTestField() {
-    when(fieldApi.searchFields(eq("F2"), eq(fieldStatusesAllowed),
-        any(FieldsProjectionRoot.class), eq(requestPurpose)))
+    when(fieldApi.searchFields(eq("F2"), eq(ALL_FIELD_STATUSES), any(FieldsProjectionRoot.class), eq(requestPurpose)))
         .thenReturn(List.of(field2));
 
     List<FieldJson> singleTestField = fieldSearchService.searchFields("F2", REQUEST_PURPOSE);
     assertThat(singleTestField).hasSize(1);
-    assertThat(singleTestField.get(0)).usingRecursiveComparison()
-        .isEqualTo(field2Json);
+    assertThat(singleTestField.getFirst()).usingRecursiveComparison().isEqualTo(field2Json);
   }
 
   @Test
   void searchFieldsWithOperatorForUser_regulatorUser_allTestFields() {
-    when(fieldApi.searchFields(eq("F"), eq(fieldStatusesAllowed),
-        any(FieldsProjectionRoot.class), eq(requestPurpose)))
+    when(fieldApi.searchFields(eq("F"), eq(ALL_FIELD_STATUSES), any(FieldsProjectionRoot.class), eq(requestPurpose)))
         .thenReturn(fieldsWithOperatorList);
     when(teamService.getTeamsOfTypeThatUserHasPermissionFor(USER, TeamType.REGULATOR, RolePermission.VIEW_PERMISSIONS))
         .thenReturn(List.of(regulatorTeam));
@@ -114,8 +133,7 @@ class FieldSearchServiceTest {
 
   @Test
   void searchFieldsWithOperatorForUser_consulteeUser_allTestFields() {
-    when(fieldApi.searchFields(eq("F"), eq(fieldStatusesAllowed),
-        any(FieldsProjectionRoot.class), eq(requestPurpose)))
+    when(fieldApi.searchFields(eq("F"), eq(ALL_FIELD_STATUSES), any(FieldsProjectionRoot.class), eq(requestPurpose)))
         .thenReturn(fieldsWithOperatorList);
     when(teamService.getTeamsOfTypeThatUserHasPermissionFor(USER, TeamType.REGULATOR, RolePermission.VIEW_PERMISSIONS))
         .thenReturn(Collections.emptyList());
@@ -129,8 +147,7 @@ class FieldSearchServiceTest {
 
   @Test
   void searchFieldsWithOperatorForUser_industryUser_twoFields() {
-    when(fieldApi.searchFields(eq("F"), eq(fieldStatusesAllowed),
-        any(FieldsProjectionRoot.class), eq(requestPurpose)))
+    when(fieldApi.searchFields(eq("F"), eq(ALL_FIELD_STATUSES), any(FieldsProjectionRoot.class), eq(requestPurpose)))
         .thenReturn(fieldsWithOperatorList);
     when(teamService.getTeamsOfTypeThatUserHasPermissionFor(USER, TeamType.REGULATOR, RolePermission.VIEW_PERMISSIONS))
         .thenReturn(Collections.emptyList());
@@ -144,8 +161,7 @@ class FieldSearchServiceTest {
 
   @Test
   void searchFieldsWithOperatorForUser_regulatorUser_singleTestField() {
-    when(fieldApi.searchFields(eq("F2"), eq(fieldStatusesAllowed),
-        any(FieldsProjectionRoot.class), eq(requestPurpose)))
+    when(fieldApi.searchFields(eq("F2"), eq(ALL_FIELD_STATUSES), any(FieldsProjectionRoot.class), eq(requestPurpose)))
         .thenReturn(List.of(field2WithOperator));
     when(teamService.getTeamsOfTypeThatUserHasPermissionFor(USER, TeamType.REGULATOR, RolePermission.VIEW_PERMISSIONS))
         .thenReturn(List.of(regulatorTeam));
@@ -157,8 +173,7 @@ class FieldSearchServiceTest {
 
   @Test
   void searchFieldsWithOperatorForUser_consulteeUser_singleTestField() {
-    when(fieldApi.searchFields(eq("F2"), eq(fieldStatusesAllowed),
-        any(FieldsProjectionRoot.class), eq(requestPurpose)))
+    when(fieldApi.searchFields(eq("F2"), eq(ALL_FIELD_STATUSES), any(FieldsProjectionRoot.class), eq(requestPurpose)))
         .thenReturn(List.of(field2WithOperator));
     when(teamService.getTeamsOfTypeThatUserHasPermissionFor(USER, TeamType.REGULATOR, RolePermission.VIEW_PERMISSIONS))
         .thenReturn(Collections.emptyList());
@@ -172,8 +187,7 @@ class FieldSearchServiceTest {
 
   @Test
   void searchFieldsWithOperatorForUser_industryUser_singleField() {
-    when(fieldApi.searchFields(eq("F"), eq(fieldStatusesAllowed),
-        any(FieldsProjectionRoot.class), eq(requestPurpose)))
+    when(fieldApi.searchFields(eq("F"), eq(ALL_FIELD_STATUSES), any(FieldsProjectionRoot.class), eq(requestPurpose)))
         .thenReturn(fieldsWithOperatorList);
     when(teamService.getTeamsOfTypeThatUserHasPermissionFor(USER, TeamType.REGULATOR, RolePermission.VIEW_PERMISSIONS))
         .thenReturn(Collections.emptyList());
@@ -190,8 +204,7 @@ class FieldSearchServiceTest {
 
   @Test
   void searchFieldsWithOperatorForUser_industryUser_singleField_userHasViewFcsPermissionForInFieldEquityPartnerTeam() {
-    when(fieldApi.searchFields(eq("F"), eq(fieldStatusesAllowed),
-        any(FieldsProjectionRoot.class), eq(requestPurpose)))
+    when(fieldApi.searchFields(eq("F"), eq(ALL_FIELD_STATUSES), any(FieldsProjectionRoot.class), eq(requestPurpose)))
         .thenReturn(fieldsWithOperatorList);
     when(teamService.getTeamsOfTypeThatUserHasPermissionFor(USER, TeamType.REGULATOR, RolePermission.VIEW_PERMISSIONS))
         .thenReturn(Collections.emptyList());
@@ -211,8 +224,7 @@ class FieldSearchServiceTest {
 
   @Test
   void searchFieldsWithOperatorForUser_industryUser_noPermissions() {
-    when(fieldApi.searchFields(eq("F"), eq(fieldStatusesAllowed),
-        any(FieldsProjectionRoot.class), eq(requestPurpose)))
+    when(fieldApi.searchFields(eq("F"), eq(ALL_FIELD_STATUSES), any(FieldsProjectionRoot.class), eq(requestPurpose)))
         .thenReturn(List.of(field1WithOperator));
     when(teamService.getTeamsOfTypeThatUserHasPermissionFor(USER, TeamType.REGULATOR, RolePermission.VIEW_PERMISSIONS))
         .thenReturn(Collections.emptyList());
@@ -228,8 +240,7 @@ class FieldSearchServiceTest {
 
   @Test
   void searchFieldsWithOperatorForUser_industryUser_noOperator() {
-    when(fieldApi.searchFields(eq("F"), eq(fieldStatusesAllowed),
-        any(FieldsProjectionRoot.class), eq(requestPurpose)))
+    when(fieldApi.searchFields(eq("F"), eq(ALL_FIELD_STATUSES), any(FieldsProjectionRoot.class), eq(requestPurpose)))
         .thenReturn(List.of(field1WithNoOperatorButLicences));
     when(teamService.getTeamsOfTypeThatUserHasPermissionFor(USER, TeamType.REGULATOR, RolePermission.VIEW_PERMISSIONS))
         .thenReturn(Collections.emptyList());
